--- a/style/index.css
+++ b/style/index.css
@@ -50,4 +50,42 @@
   border-radius: 1px;
   font-weight: 500;
 }
+
+.cheong-machinery .sec-1 {
+  background-image: url("https://media.istockphoto.com/photos/construction-site-background-picture-id1337111964?b=1&k=20&m=1337111964&s=170667a&w=0&h=n7KjvjgUbC1wYHq_45N4LVLoO1I_4ftDvhvoCKF2fjg=");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding: 2rem 0;
+}
+
+.cheong-machinery .sec-1 .container {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 1rem;
+  border-radius: 20px;
+  width: 80%;
+  margin-inline: auto;
+  max-width: 600px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  row-gap: 0.5rem;
+}
+
+.cheong-machinery .sec-1 .container .logo {
+  width: 100%;
+  max-width: 400px;
+}
+
+.cheong-machinery .sec-1 .container p {
+  text-align: center;
+  font-weight: 500;
+}
 /*# sourceMappingURL=index.css.map */
