--- a/style/index.scss
+++ b/style/index.scss
@@ -81,6 +81,48 @@ $max-width-3: 1000px;
     }
 
 
+    .sec-1{
+        background-image: url("https://media.istockphoto.com/photos/construction-site-background-picture-id1337111964?b=1&k=20&m=1337111964&s=170667a&w=0&h=n7KjvjgUbC1wYHq_45N4LVLoO1I_4ftDvhvoCKF2fjg=");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        padding: $pad4 0;
+
+        
+
+        .container{
+            $sec1-c-dim: 350px;
+            background-color: rgba($color: white, $alpha: 0.8);
+            padding: $pad2;
+            border-radius: 20px;
+            width: 80%;
+            margin-inline: auto;
+            max-width: $max-width-1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            row-gap: $pad1;
+
+            .logo{
+                width: 100%;
+                max-width: 400px;
+            }
+    
+            p{
+                text-align: center;
+                font-weight: $fw5;
+                
+            }
+        }
+
+    // sec-1
+    }
+
+
+
+    
+
+
 
 
 
