remove header padding

--- a/style/index.scss
+++ b/style/index.scss
@@ -42,8 +42,9 @@ $max-width-3: 1000px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: $pad2 0;
+        padding-top: $pad2; 
         row-gap: $pad1;
+        
 
         // Logo
         .logo{
