--- a/style/index.css
+++ b/style/index.css
@@ -21,7 +21,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 1rem 0;
+  padding-top: 1rem;
   row-gap: 0.5rem;
 }
 
