--- a/style/index.scss
+++ b/style/index.scss
@@ -91,6 +91,7 @@ $max-width-3: 1000px;
         background-position: center;
         padding: $pad4 0;
         width: 100%;
+        height: 70vh;
 
         
 
