--- a/style/index.css
+++ b/style/index.css
@@ -57,7 +57,7 @@
 }
 
 .cheong-machinery .hero {
-  background-image: url("https://media.istockphoto.com/photos/construction-site-background-picture-id1337111964?b=1&k=20&m=1337111964&s=170667a&w=0&h=n7KjvjgUbC1wYHq_45N4LVLoO1I_4ftDvhvoCKF2fjg=");
+  background-image: url("https://images.pexels.com/photos/7245333/pexels-photo-7245333.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -94,6 +94,10 @@
 .cheong-machinery .hero .container p {
   text-align: center;
   font-weight: 500;
+}
+
+.cheong-machinery .services {
+  padding: 2rem;
 }
 
 .cheong-machinery .services .container {
@@ -219,7 +223,6 @@
           align-items: center;
   width: 90%;
   margin: 1rem auto;
-  border: #D61900 2px solid;
   padding: 0.5rem;
   max-width: 900px;
   border-radius: 20px;
