--- a/style/index.scss
+++ b/style/index.scss
@@ -85,7 +85,7 @@ $max-width-3: 1000px;
 
 
     .hero{
-        background-image: url("https://media.istockphoto.com/photos/construction-site-background-picture-id1337111964?b=1&k=20&m=1337111964&s=170667a&w=0&h=n7KjvjgUbC1wYHq_45N4LVLoO1I_4ftDvhvoCKF2fjg=");
+        background-image: url("https://images.pexels.com/photos/7245333/pexels-photo-7245333.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -128,7 +128,7 @@ $max-width-3: 1000px;
 
     .services{
         // background-color: rgba(rgb(98, 98, 255), 0.7);
-
+        padding: 2rem;
         .container{
 
 
@@ -245,7 +245,7 @@ $max-width-3: 1000px;
         align-items: center;
         width: 90%;
         margin: $pad2 auto;
-        border: #D61900 2px solid;
+        // border: #D61900 2px solid;
         padding: $pad1;
         max-width: $max-width-2;
         border-radius: 20px;
