--- a/style/index.css
+++ b/style/index.css
@@ -84,6 +84,7 @@
       -ms-flex-align: center;
           align-items: center;
   row-gap: 0.5rem;
+  margin-top: 10%;
 }
 
 .cheong-machinery .hero .container .logo {
@@ -223,7 +224,8 @@
           align-items: center;
   width: 90%;
   margin: 1rem auto;
-  padding: 0.5rem;
+  padding: 1rem;
+  font-weight: 500;
   max-width: 900px;
   border-radius: 20px;
 }
@@ -232,8 +234,8 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-column-gap: 0.2rem;
-          column-gap: 0.2rem;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
