--- a/style/index.css
+++ b/style/index.css
@@ -26,7 +26,7 @@
 }
 
 .cheong-machinery .header .logo {
-  width: 120px;
+  width: 150px;
 }
 
 .cheong-machinery .header .navbar {
@@ -57,17 +57,16 @@
 }
 
 .cheong-machinery .hero {
-  background-image: url("https://images.pexels.com/photos/7245333/pexels-photo-7245333.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background-image: url("https://img.freepik.com/premium-photo/construction-worker-truss-installation_33835-781.jpg?w=1060");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position: top;
   padding: 2rem 0;
   width: 100%;
   height: 70vh;
 }
 
 .cheong-machinery .hero .container {
-  background-color: rgba(255, 255, 255, 0.8);
   padding: 1rem;
   border-radius: 20px;
   width: 80%;
@@ -98,6 +97,7 @@
 }
 
 .cheong-machinery .services {
+  background-image: url("https://img.freepik.com/free-photo/white-concrete-wall_53876-92803.jpg?t=st=1658217456~exp=1658218056~hmac=f9d0b689e24d17a5639fb61fc6dadaaf8126342f29daaca6e22d1e7525ffc140&w=1060");
   padding: 2rem;
 }
 
@@ -186,7 +186,7 @@
 }
 
 .cheong-machinery .about-us .container .section h3 {
-  background-color: #EB1D23;
+  background-color: rgba(235, 29, 35, 0.5);
   padding: 1rem;
 }
 
