--- a/style/index.css
+++ b/style/index.css
@@ -157,6 +157,66 @@
   text-align: center;
 }
 
+.cheong-machinery .products {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 2rem 0;
+  row-gap: 2rem;
+}
+
+.cheong-machinery .products select {
+  border: 3px solid black;
+  padding: 0.2rem 0.8rem;
+  border-radius: 10px;
+  color: black;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  margin-inline: auto;
+}
+
+.cheong-machinery .products .product-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: scroll;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.cheong-machinery .products .product-list .item {
+  border-radius: 10px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 0.5rem;
+  color: white;
+}
+
+.cheong-machinery .products .product-list .item .name {
+  font-weight: 500;
+  color: black;
+}
+
+.cheong-machinery .products .product-list .item img {
+  height: 200px;
+  width: 150px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px;
+}
+
 .cheong-machinery .about-us {
   background-image: url("https://images.pexels.com/photos/4170184/pexels-photo-4170184.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
 }
