--- a/style/index.scss
+++ b/style/index.scss
@@ -185,6 +185,64 @@ $max-width-3: 1000px;
     }
 
 
+    // Products
+
+    .products{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 2rem 0;
+        row-gap: 2rem;
+                
+        
+
+
+        select{
+            border: 3px solid black;
+            padding: 0.2rem 0.8rem;
+            border-radius: 10px;
+            color: black;
+            font-weight: 600;
+            text-transform: uppercase;
+            font-size: 1.2rem;
+            margin-inline:auto ;
+        }
+
+        .product-list{
+
+            display: flex;
+            overflow: scroll;
+            column-gap: 1rem;
+            justify-content: center;
+            
+
+
+            .item{
+
+                border-radius: 10px;
+                width: fit-content;
+                padding: 0.5rem;
+                // background-color: $darkerred;
+                color: white;
+
+                .name{
+                    font-weight: 500;
+                    color: black;
+
+                }
+
+                img{
+                    height: 200px;
+                    width: 150px;
+                    object-fit: cover;
+                    border-radius: 10px;
+                }
+            }
+        }
+    }
+
+    // Products
+
 
     .about-us{
 
