--- a/style/index.css
+++ b/style/index.css
@@ -181,6 +181,12 @@
   text-transform: uppercase;
   font-size: 1.2rem;
   margin-inline: auto;
+  outline: none;
+}
+
+.cheong-machinery .products option {
+  font-size: 0.8rem;
+  text-transform: capitalize;
 }
 
 .cheong-machinery .products .product-list {
