--- a/style/index.scss
+++ b/style/index.scss
@@ -206,6 +206,12 @@ $max-width-3: 1000px;
             text-transform: uppercase;
             font-size: 1.2rem;
             margin-inline:auto ;
+            outline: none;
+        }
+
+        option{
+            font-size: 0.8rem;
+            text-transform: capitalize;
         }
 
         .product-list{
