--- a/style/index.scss
+++ b/style/index.scss
@@ -217,40 +217,32 @@ $max-width-3: 1000px;
         .product-list{
 
             display: flex;
-            overflow: scroll;
-            column-gap: 1rem;
-            justify-content: flex-start;
+            overflow-x: auto; 
+            width: 100%;
 
             
-            /* Hide scrollbar for Chrome, Safari and Opera */
-        .product-list::-webkit-scrollbar {
-            display: none;
-        }
-        
-        /* Hide scrollbar for IE, Edge and Firefox */
-        .product-list {
-            -ms-overflow-style: none;  /* IE and Edge */
-            scrollbar-width: none;  /* Firefox */
-        }
+  
 
 
             .item{
 
                 border-radius: 10px;
                 width: fit-content;
-                padding: 0.5rem;
+                padding: 1rem;
                 // background-color: $darkerred;
                 color: white;
+
 
                 .name{
                     font-weight: 500;
                     color: black;
+                    text-align: center;
 
                 }
 
                 img{
                     height: 200px;
-                    width: 150px;
+                    // width: 150px;
                     object-fit: cover;
                     border-radius: 10px;
                 }
@@ -340,14 +332,15 @@ $max-width-3: 1000px;
 
 
             .icon{
-                width: 32px;
-                height: 32px;
+                width: 24px;
+                height: 24px;
 
             }
             
             .info{
                 max-width: 100%;
-                word-break: break-all;
+                font-size: 0.9rem;
+                // word-break: break-all;
                 
             }
         }
