--- a/style/index.scss
+++ b/style/index.scss
@@ -197,6 +197,11 @@ $max-width-3: 1000px;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 0.5rem;
+        padding: 0.5rem;
         
 
 
@@ -205,8 +210,14 @@ $max-width-3: 1000px;
             cursor: pointer;
             font-weight: 600;
             color: #D61900;
-            text-align: end;
-            padding: 0.5rem 0.7rem;
+            align-self: flex-end;
+            padding: 0 0.7rem;
+        }
+
+        #display-img{
+            height: 200px;
+            
+            
         }
 
         .info-container{
@@ -217,15 +228,17 @@ $max-width-3: 1000px;
 
         .info-row{
             display: flex;
-            column-gap: 0.2rem;
             border: 2px solid black;
             justify-content: space-between;
+            
         }
 
         .info-row>*{
             width: 100%;
             border: 2px solid black;
             font-size: 0.9rem;
+
+            padding: 0.2rem;
 
         }
 
