--- a/style/index.scss
+++ b/style/index.scss
@@ -203,7 +203,8 @@ $max-width-3: 1000px;
         row-gap: 0.5rem;
         padding: 0.5rem;
         border-radius: 5px;
-        box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;        
+        box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;       
+        border: 2px solid black; 
 
 
 
