--- a/style/index.scss
+++ b/style/index.scss
@@ -498,10 +498,12 @@ $max-width-3: 1000px;
     .cheong-machinery{
 
         .header{
-            .container{
+            .navbar{
+                .container{
 
-                a{
-                    font-size: 1.2rem;
+                    a{
+                        font-size: 1.2rem;
+                    }
                 }
             }
         }
