--- a/style/index.scss
+++ b/style/index.scss
@@ -58,6 +58,10 @@ $max-width-3: 1000px;
             
             background-color: $darkerred;
             width: 100%;
+            position: -webkit-sticky;
+            position: sticky;
+            top: 0;
+            
 
             .container{
                 display: flex;
@@ -87,19 +91,24 @@ $max-width-3: 1000px;
 
     .hero{
         // background-image: url("https://images.pexels.com/photos/7245333/pexels-photo-7245333.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
-        background-image: url("https://img.freepik.com/premium-photo/construction-worker-truss-installation_33835-781.jpg?w=1060");
+        // background-image: url("https://img.freepik.com/premium-photo/construction-worker-truss-installation_33835-781.jpg?w=1060");
+        // background: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0)), url("https://images.unsplash.com/photo-1611906622516-be9a76360430?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+        // background-image: url("../assets/cheong-banner.jpg");
+       
+        background-image: url("https://img.freepik.com/free-photo/excavator-action_1112-1598.jpg?w=996&t=st=1659082029~exp=1659082629~hmac=7d58f95fcca9d7141eea07cd2168e877f0bfd5aa2de12445678ab10af395f7d7");
         background-repeat: no-repeat;
         background-size: cover;
-        background-position: top;
-        padding: $pad4 0;
+        background-position: bottom;
+        padding:1rem 0;
         width: 100%;
         height: 70vh;
+        
 
         
 
         .container{
             $sec1-c-dim: 350px;
-            // background-color: rgba($color: rgb(156, 126, 126), $alpha: 0.8);
+            // background-color: rgba($color: rgb(182, 175, 175), $alpha: 0.4);
             padding: $pad2;
             border-radius: 20px;
             width: 80%;
@@ -109,7 +118,8 @@ $max-width-3: 1000px;
             flex-direction: column;
             align-items: center;
             row-gap: $pad1;
-            margin-top: 10%;
+            // margin-top: 2%;
+            max-width: 400px;
 
             .logo{
                 width: 100%;
@@ -207,6 +217,7 @@ $max-width-3: 1000px;
         box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;       
         border: 2px solid black; 
         max-width: 500px;
+        z-index: -1;
         
 
 
@@ -262,11 +273,11 @@ $max-width-3: 1000px;
         align-items: center;
         padding: 2rem 0;
         row-gap: 2rem;
-        background-image:
-        linear-gradient(
-          to right, 
-          rgba($darkerred, 0.2), white
-        );
+        // background-image:
+        // linear-gradient(
+        //   to right, 
+        //   rgba($darkerred, 0.2), white
+        // );
 
         select{
             border: 3px solid black;
@@ -515,4 +526,17 @@ $max-width-3: 1000px;
 
     }
     
+}
+
+@media only screen and (min-width: 1000px) {
+
+    .services{
+        .container{
+            .service-list{
+                display: flex;
+                flex-direction: row;
+            }
+        }
+    }
+
 }
