--- a/style/index.css
+++ b/style/index.css
@@ -260,6 +260,7 @@
   font-size: 1.2rem;
   margin-inline: auto;
   outline: none;
+  text-align: center;
 }
 
 .cheong-machinery .products option {
