--- a/style/index.scss
+++ b/style/index.scss
@@ -292,6 +292,7 @@ $max-width-3: 1000px;
             font-size: 1.2rem;
             margin-inline:auto ;
             outline: none;
+            text-align: center;
         }
 
         option{
